--- a/src/server/resources/Calendar.css
+++ b/src/server/resources/Calendar.css
@@ -16,25 +16,35 @@
   font-size: 18px; /* Change to your desired size */
 }
 
-.react-calendar__tile--active {
-  background: #4caf50 !important;  /* green background */
-  color: white !important;         /* white text */
-  border-radius: 12px !important;  /* rounded corners */
-  font-weight: bold;
-}
 
 .react-calendar__tile--now {
-  background: #ffeb3b !important;   /* yellow background */
+  /* background-color: rgba(0,0,0,0) !important; */
+  /* border: solid 1px black !important; */
   color: black !important;          /* text color */
   border-radius: 12px !important;    /* optional: circle */
   font-weight: bold;
 }
 
 .react-calendar__tile:enabled:hover {
+  background-color: #4caf50 !important; /* light blue */
+  color: black !important;
+  border-radius: 12px !important;
+  cursor: pointer;
+}
+
+.react-calendar__tile:hover {
   background-color: #f0f0f0 !important; /* light blue */
   color: black !important;
   border-radius: 12px !important;
   cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.react-calendar__tile--active {
+  background: #4caf50 !important;  /* green background */
+  color: white !important;         /* white text */
+  border-radius: 12px !important;  /* rounded corners */
+  font-weight: bold;
 }
 .react-calendar__navigation__label {
   font-size: 18px;
