--- a/src/server/resources/Calendar-phone.css
+++ b/src/server/resources/Calendar-phone.css
@@ -1,18 +1,18 @@
 /* Customize the calendar container */
 .react-calendar {
-  border: 2px solid #00ff00;
+  border: 2px solid #333;
   border-radius: 12px;
   padding: 10px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
   font-style: bold;
-  width: 450px; /* default is ~350px */
+  width: 70%; /* default is ~350px */
   max-width: 100%;
-  font-size: 18px; /* increases font size of all elements */
+  font-size: 50px; /* increases font size of all elements */
   padding: 20px;
 
 }
 .react-calendar__tile {
-  font-size: 18px; /* Change to your desired size */
+  font-size: 50px; /* Change to your desired size */
 }
 
 
@@ -46,22 +46,22 @@
   font-weight: bold;
 }
 .react-calendar__navigation__label {
-  font-size: 18px;
+  font-size: 50px;
   font-weight: bold;
 }
 .react-calendar__navigation button {
-  font-size: 22px;
+  font-size: 60px;
 }
 
 /* Weekday labels */
 .react-calendar__month-view__weekdays abbr {
-  font-size: 18px;
+  font-size: 50px;
   border-bottom: none !important;
   text-decoration: none;
 
 }
 .react-calendar__month-view__weekdays__weekday {
-  font-size: 18px;
+  font-size: 50px;
   border-bottom: none !important;
   text-decoration: none;
 
